# tintai-flet

./: README.md  pyproject.toml
src/tintai_flet/: __init__.py  main.py  scraping.py
