[project]
name = "tintai-flet"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "hamada", email = "hamada@infitech.co.jp" }
]
dependencies = [
    "urllib3>=2.0.4",
    "pandas>=2.0.3",
    "BeautifulSoup4>=4.12.2",
    "flet>=0.9.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true
